# 3DS-Chunker

./: .gitignore  .gitmodules  LICENSE  README.md  chunk  classes.py  main.py  minecraft3ds.h  parse.py  parser.py  pyproject.toml  requirements.txt
mc3ds/: .gitmodules  EmptyChunk.py  __init__.py  __main__.py  blockids.json  classes.py  convert.py  javato3ds.py  leveldat.py  ls3ds.py  minecraft3ds.h  nbt.py  parser.py  requirements.txt
mc3ds-win10/: __main__.py  classes.py  convert.py  minecraft3ds.h  nbt.py  requirements.txt
mc3ds/data/: blocks.json  blocks.jsonc  repo.txt  sources.md
mc3ds/worlds/blankWorld/: level.dat_old
mc3ds/worlds/blankWorld/advancements/: cb365c9a-cf29-4fda-a7f3-b23e99ce5910.json
mc3ds/worlds/blankWorld/region/: r.-1.1.mca  r.-2.0.mca  r.-2.1.mca  r.0.1.mca  r.1.-1.mca  r.1.-2.mca  r.1.0.mca  r.1.1.mca
mc3ds/worlds/blankWorld/stats/: cb365c9a-cf29-4fda-a7f3-b23e99ce5910.json
mc3ds/xnbt/: xnbt.py
netherblanker/: __main__.py
